Bugfix #9: removed message-row height parameter to preventing overlapping between this element and the page-header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -197,10 +197,6 @@ main {
     margin-top: 20px;
 }
 
-.message-row {
-    height: 5vh;
-}
-
 .row.message-row {
     margin-bottom: 0px;
 }
